# Boost.DLL

./: .gitignore  .travis.yml  BOOST_DLL_ALIAS.html  BOOST_DLL_ALIAS_SECTIONED.html  BOOST_DLL_AUTO_ALIAS.html  BOOST_DLL_FORCE_ALIAS_INSTANTIATION.html  BOOST_DLL_SECTION.html  BOOST_DLL_SELECTANY.html  BOOST_PLUGIN_ALIAS.html  CMakeLists.txt  README.md  add-tracker.sh  appveyor.yml  build.jam  dll-doc_HTML.manifest  index.html  standalone_HTML.manifest  travis.jam
.github/workflows/: ci.yml
application/: reference.html
boost/dll/: import.html  import_alias.html  import_function.html  import_function_alias.html  import_function_idp5876320.html  import_function_idp5926016.html  import_function_idp5939696.html  import_function_idp5949264.html  import_function_idp5959344.html  import_function_idp5989280.html  import_function_idp5998848.html  import_function_idp6008928.html  import_function_idp6077184.html  import_function_idp6128320.html  import_function_idp6140576.html  import_function_idp6150240.html  import_function_idp6160240.html  import_function_idp6191632.html  import_function_idp6201184.html  import_function_idp6211264.html  import_function_idp6420256.html  import_function_idp6438944.html  import_function_idp6483632.html  import_function_idp6493200.html  import_function_idp6502304.html  import_function_idp6503280.html  import_function_idp6511856.html  import_function_idp6521936.html  import_symbol.html  import_variable.html  import_variable_alias.html  import_variable_idp5905008.html  import_variable_idp5915056.html  import_variable_idp5924784.html  import_variable_idp5934864.html  import_variable_idp5954880.html  import_variable_idp5964928.html  import_variable_idp5974656.html  import_variable_idp5984736.html  import_variable_idp6026656.html  (+39 more)
boost/dll/load_mode/: type.html
boost/plugin/: alias.html  load_mode.html  operator_.html  operator__.html  operator_idp16998496.html  operator_idp17016176.html  operator_idp46249040.html  operator_idp5268208.html  operator_idp5531824.html  operator_idp5579168.html  operator_idp5836800.html  operator_idp5854480.html  operator_idp5928896.html  operator_idp5950544.html  operator_idp5968848.html  shared_functio_idp16886976.html  shared_function_idp5702448.html  shared_function_idp5712240.html  shared_function_idp5722000.html  shared_function_idp5731984.html  shared_function_idp5763392.html  shared_function_idp5773184.html  shared_function_idp5782848.html  shared_function_idp5837584.html  shared_library.html  shared_variable_idp5741760.html  shared_variable_idp5847264.html  shared_variable_idp5857232.html  shared_variable_idp5860224.html  shared_variable_idp5869312.html  shared_variable_idp5878784.html  shared_variable_idp5979984.html  shared_variable_idp5989456.html  swap.html
boost_application/: dependencies.html  f_a_q_.html  i_have_found_a_bug__how_do_i_notify_.html  introduction0.html  revision_history.html  tutorial.html
boost_dll/: dependencies.html  design_rationale.html  f_a_q_.html  introduction0.html  limitations.html  revision_history.html  tutorial.html
boost_plugin/: dependencies.html  design_rationale.html  f_a_q_.html  i_have_found_a_bug__how_do_i_notify_.html  introduction0.html  revision_history.html  tutorial.html
dll/: reference.html
doc/: Jamfile.jam  Jamfile.v2  ack.qbk  dependencies.qbk  design_rationale.qbk  dll.qbk  faq.qbk  getting_started.qbk  introduction.qbk  limitations.qbk  mangled.qbk  missuses.qbk  plugin.qbk  revisionhistory.qbk  tutorial.qbk
example/: Jamfile.v2  b2_workarounds.hpp  getting_started.cpp  getting_started_library.cpp  load_self.cpp  plugin_api.hpp  plugin_library.cpp  plugin_library.cpp.rej  shared_lib_path.hpp  shared_library_load_plugin.cpp
example/mangled/: import_class.cpp  smart_lib.cpp
example/tutorial1/: my_plugin_sum.cpp  tutorial1.cpp
example/tutorial2/: my_plugin_aggregator.cpp  tutorial2.cpp
example/tutorial3/: load_self.cpp  static_plugin.cpp  static_plugin.hpp  tutorial3.cpp
example/tutorial4/: load_self.cpp  static_plugin.cpp  static_plugin.hpp
example/tutorial5/: load_all.cpp
example/tutorial6/: on_unload_lib.cpp  tutorial6.cpp
example/tutorial7/: library1.cpp  library2.cpp  tutorial7.cpp
example/tutorial8/: refcounting_api.hpp  refcounting_plugin.cpp  refcounting_plugin.hpp  tutorial8.cpp  tutorial8_static.cpp
example/tutorial9/: tutorial9.cpp
example/tutorial_common/: my_plugin_api.hpp  plugin_api.hpp
include/boost/: demangle.hpp  dll.hpp  plugin.hpp
include/boost/detail/winapi/: dbghelp.hpp  dll.hpp  dll2.hpp
include/boost/dll/: alias.hpp  config.hpp  export.hpp  import.hpp  import_class.hpp  import_function.hpp  import_mangled.hpp  import_variable.hpp  library_info.hpp  mangled_storage.hpp  refcountable.hpp  runtime_symbol_info.hpp  shared_library.hpp  shared_library_load_mode.hpp  smart_library.hpp
include/boost/dll/detail/: aggressive_ptr_cast.hpp  ctor_dtor.hpp  demangle_symbol.hpp  descriptors.hpp  elf_info.hpp  get_mem_fn_type.hpp  import_mangled_helpers.hpp  macho_info.hpp  mem_fn_cast.hpp  pe_info.hpp  read_outline.hpp  system_error.hpp  type_info.hpp  x_info_interface.hpp
include/boost/plugin/: alias.hpp  library_info.hpp  refcountable.hpp  shared_library.hpp  shared_library_load_mode.hpp  shared_library_types.hpp
include/boost/plugin/detail/: aggressive_ptr_cast.hpp  system_error.hpp
plugin/: reference.html
test/: CMakeLists.txt  Jamfile.v2  appveyor.yml  broken_library_info_test.cpp  cpp_ctti_type_name_parser_lib.cpp  cpp_import_class_test.cpp  cpp_import_test.cpp  cpp_load_test.cpp  cpp_mangle_test.cpp  cpp_mangling.cpp  cpp_mangling1_cf.cpp  cpp_test_library.cpp  ctti_type_name_parser_test.cpp  library_info_test.cpp  link.hpp  not_a_function.cpp  section_name_too_big.cpp  shared_library_concurrent_load_test.cpp  shared_library_errors.cpp  shared_library_get_symbol_test.cpp  shared_library_load_test.cpp  shared_library_search_symbol_test.cpp  structures_tests.cpp  symbol_runtime_info_test.cpp  template_method_linux_test.cpp  test_library.cpp  travis.jam
test/cmake_subdir_test/: CMakeLists.txt
(+25 files in other folders)
